# irc_lib

./: Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
src/: config.rs  connection.rs  irc_plugin.rs  lib.rs  main.rs  message.rs  server.rs
src/connection/: connection.rs  error.rs  irc_connection.rs  mod.rs  negotiator.rs
src/message/: error.rs  irc_message.rs  mod.rs
src/server/: channel.rs  client.rs  error.rs  irc_server.rs  mod.rs  server.rs  user.rs
tests/: irc_lib.rs
tests/common/: mod.rs  test_plugins.rs
