[package]
name = "irc_lib"
version = "0.1.0"
authors = ["Mario de la Ossa <mariodelaossa@gmail.com>", "Jon Grimes <jonkgrimes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
err-derive = "0.3.1"
irc-rust = "0.3.3"
regex = "1"
