[package]
name = "irc_lib"
version = "0.1.1"
authors = ["Mario de la Ossa <mariodelaossa@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Simple IRC library with plugin support"
keywords = ["irc"]
repository = "https://github.com/mdelaossa/irc_lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "2.0.1", features = ["full"]}